# simple-soc

./: LICENSE.txt  README.md  pyproject.toml
src/_cxxrtl/: Makefile  serial_driver.cc  simple_soc.ys  simulate.cc
src/_cxxrtl/include/: logfmt.h
src/_hello/: Makefile  hello.S  link.ld
src/simple_soc/: cli.py  memory.py  serial.py  top.py
